# cast-docs

./: .gitignore  CHANGELIST.md  INSTALL_AGENT.md  NOTICE  README.md  RELEASE.md  SKILL.md  TODO.md  changelist.html  index.html  install.html  install.sh  pyproject.toml  readme.html  todo.html
.cast-docs/: .gitignore  README.md  glossary.json  i18n.json  preferences.json  project.json  writing-style.md
agents/: openai.yaml
assets/: base-template.html
config/: components.json  document-types.json  html-profile.json  i18n.json  interactions.json  layouts.json  theme-tokens.json
examples/: bilingual-decision.html  bilingual-decision.json  cast-docs-sample.html  component-gallery.html  component-gallery.json  cross-team-alignment.html  cross-team-alignment.json  document-digest.html  document-digest.json  option-decision.html  option-decision.json  principle-showcase.html  principle-showcase.json  problem-investigation.html  problem-investigation.json
plan/: 00_overview.html  00_overview.json  01_features.html  01_features.json  02_interaction.html  02_interaction.json  index.html  index.json
references/: component-library.md  design-laws.md  document-types.md  examples.md  generation-contract.md  html-profile.md  implementation-architecture.md  interactive-features.md  module-architecture.md  project-profile.md  tool-entrypoints.md  writing-style.md
schemas/: doc.schema.json
scripts/: __init__.py  build_index.py  cast_docs_context.py  cast_docs_core.py  cast_docs_html_profile.py  cast_docs_inline.py  cast_docs_renderer.py  cast_docs_renderer_blocks.py  (+13 more)
(+61 files in other folders)
